# magnum-shaderlab

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  ShaderLab.cpp  resources.conf  shader-test.frag  shader.frag  shader.vert
